--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ body {
 .box {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  height: 100%;
   h1 {
     font-size: 20px;
     margin: 0 0 1rem 0;
@@ -30,7 +30,7 @@ body {
     li {
       align-items: center;
       display: flex;
-      justify-content: flex-start;
+      // justify-content: flex-start;
     }
   }
 }
